# treening

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  manifest.json  robots.txt  sitemap.xml  sw.js  webllm-worker.js
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy.yml
src/: backup.rs  data.rs  main.rs  models.rs  muscle_data.rs  sharing.rs  storage.rs
src/components/: achievements.rs  ai_chat.rs  charts.rs  custom_exercise.rs  exercise_detail.rs  exercise_list.rs  history.rs  mod.rs  nav.rs  routine_editor.rs  settings.rs  share_modal.rs  sync.rs  toast.rs  workout_log.rs
src/pages/: ai_chat.rs  analytics.rs  exercises.rs  faq.rs  history.rs  home.rs  landing.rs  mod.rs  muscles.rs  plate_calculator.rs  routines.rs  settings.rs  shared.rs  social.rs  workout.rs
