[package]
name = "treening"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = { version = "0.11", features = ["storage", "timers", "file", "utils", "dialogs"] }
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlAnchorElement",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Url",
    "BlobPropertyBag",
    "HtmlSelectElement",
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcPeerConnectionIceEvent",
    "RtcDataChannelEvent",
    "MessageEvent",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
qrcode-generator = "5"
log = "0.4"
wasm-logger = "0.2"
